service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-magnus
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 1337
    nodePort: 31337
  selector:
    app: strapi
