ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: strapi-magnus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: strapi-magnus
            port:
              number: 80
